--- a/HotelSystem_client/bin/.gitignore
+++ b/HotelSystem_client/bin/.gitignore
@@ -1,9 +1,9 @@
-/PO
-/RMI
-/VO
-/blservice
-/data
-/main
-/other
-/presentation
-/MockObject
+/MockObject/
+/PO/
+/RMI/
+/VO/
+/blservice/
+/data/
+/main/
+/other/
+/presentation/
